Trying to fix the menu overflowing to the right

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -6,16 +6,12 @@
   }
 }
 
-html {
-  width: 100%;
-  height: 100%;
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
-  min-width: 100%;
-  min-height: 100%;
-
-  overflow-x: hidden;
   background-color: $secondary-background-color;
 }
 
@@ -196,6 +192,7 @@ code {
   font-size: 30px;
   text-decoration: none;
 }
+
 #back2Top:hover {
   background-color: $theme-primary;
   color: $theme-background-primary;
