--- a/assets/scss/menu.scss
+++ b/assets/scss/menu.scss
@@ -39,7 +39,8 @@
     background: #232323;
     color: #cdcdcd;
 
-    overflow-x: hidden; /* needed because hiding the menu on the right side is not perfect,  */
+    max-width: 100%;
+    overflow-x: hidden;
   }
 
   a {
